--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
-h1 {
-    font-size: 50px;
-    color: blue;
+*{
+    /* border: 2px solid red; */
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.navbar{
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding-left: 0;
+}
+
+.navbar li{
+    padding: 15px;
+}
+
+.navbar i{
+    font-size: 25px;
+}
+
+.hero{
+    border: 2px solid blue;
+    height: 90vh;
 }
